--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,7 +5,6 @@ description = "A Tauri App"
 authors = [ "you" ]
 license = ""
 repository = ""
-default-run = "magic-mic"
 edition = "2018"
 build = "src/build.rs"
 
@@ -18,6 +17,7 @@ log = "0.4.0"
 env_logger = "0.8.3"
 rand = "0.8.3"
 tokio = { version = "1.6.1", features = [ "full" ] }
+openssl = { version = "0.10", features = ["vendored"] }
 
 [build-dependencies]
 tauri-build = { version = "1.0.0-beta.0" }
